Add nutshell section

--- a/_includes/overview_usecases.html
+++ b/_includes/overview_usecases.html
@@ -1,4 +1,4 @@
-<h1>Use Cases</h1>
+<h1>NuvlaBox Use Cases</h1>
 <div class="list_usecases clearfix">                
     {% for post in site.posts %}
     {% if post.category == "usecases" and post.class == page.class and post.layout == 'article' and post.favourite %}
@@ -14,7 +14,7 @@
     </div>
     {% endif %}
     {% endfor %}
-    <div style="clear: both; float: left">
-      <a href="/products/nuvlabox-usecases.html">Read more Use Cases</a>
+    <div style="clear: both; float: left; font-weight: bold;">
+      <a href="/products/nuvlabox-usecases.html" style="color: #a00100;">Read more Use Cases</a>
     </div>
 </div>
