--- a/_layouts/article_nuvlabox_usecases.html
+++ b/_layouts/article_nuvlabox_usecases.html
@@ -38,7 +38,7 @@
                   </ul>
               </nav>
               <div class="article">
-                <h1>Use Cases</h1>
+                <h1>NuvlaBox Use Cases</h1>
 
                 <div class="list_usecases clearfix">                
                     {% for post in site.posts %}
