--- a/_includes/whats-next.html
+++ b/_includes/whats-next.html
@@ -1,9 +1,7 @@
 <h1>What's next?</h1>
 <div>
   <p>
-Interested and want to know more? We'd be pleased to provide you with further information. Get in touch or simply order here.
+Interested and want to know more? We'd be pleased to provide you with further information.
   </p>
 </div>
 <span class='contact-us-placeholder'></span>
-<p/>
-<span class='order-now-placeholder'></span>
