--- a/_layouts/article_nuvlabox_usecases.html
+++ b/_layouts/article_nuvlabox_usecases.html
@@ -42,7 +42,7 @@
 
                 <div class="list_usecases clearfix">                
                     {% for post in site.posts %}
-                    {% if post.category == page.category and post.layout == 'article' %}
+                    {% if post.category == page.category and post.class == page.class and post.layout == 'article' %}
                     <div>
                         <a href="#{{ post.title | replace:' ','-' }}">
                             <h3>
@@ -58,7 +58,7 @@
                 </div>
             
             {% for post in site.posts %}
-            {% if post.category == page.category and post.layout == 'article' %}
+            {% if post.category == page.category and post.class == page.class and post.layout == 'article' %}
                 <h1 id="{{ post.title | replace:' ','-' }}">
                   {{ post.title }}
                 </h1>
@@ -83,7 +83,7 @@
 
     </div>
 
-    <script type="text/javascript">$("#sub_{{ page.category }} > a").addClass("current");</script>
+    <script type="text/javascript">$("#menu_{{ page.class }} > a, nav li#sub_{{ page.sub }} > a").addClass("current");</script>
 
   </body>
 </html>
