--- a/_includes/overview_usecases.html
+++ b/_includes/overview_usecases.html
@@ -15,6 +15,8 @@
     {% endif %}
     {% endfor %}
     <div style="clear: both; float: left; font-weight: bold;">
-      <a href="/products/{{ page.class }}-usecases.html" style="color: #a00100;">Read more Use Cases</a>
+      <p style="margin-top: 0">
+        <a href="/products/{{ page.class }}-usecases.html" style="color: #a00100;">Read more Use Cases</a>
+      </p>
     </div>
 </div>
