--- a/_layouts/article_slipstream.html
+++ b/_layouts/article_slipstream.html
@@ -33,45 +33,23 @@
                     <h1 class="list_title">{{ page.title }}</h1>
                     <ul>
                         <li id="sub_overview"><a href="/products/slipstream.html">Overview</a></li>
-<!--                        <li id="sub_usecases"><a href="/products/slipstream-usecases.html">Use Cases</a></li> -->
+                        <li id="sub_usecases"><a href="/products/slipstream-usecases.html">Use Cases</a></li>
                         <li id="sub_features"><a href="/products/slipstream-features.html">Features</a></li>
-                        <li id="sub_business"><a href="/products/slipstream-business.html">Business Benefits</a></li>
-                        <li id="sub_tryme"><a href="/products/slipstream-tryme.html">Try Me</a></li>
                         <li id="sub_techspecs"><a href="/products/slipstream-tech.html">Tech Specs</a></li>
+                        <li id="sub_tryme"><a href="/products/slipstream-tryme.html">Try Me</a></li>
                         <li id="sub_pricing"><a href="/products/slipstream-pricing.html">Pricing</a></li>
                     </ul>
                 </nav>
-            {% if page.category == "news" %}
-            <div class="date">{{ page.date | date: "%d %B %Y" }}</div>
-            {% endif %}
-            {% if page.author %}
-            <div class="date">{{ page.date | date: "%d %B %Y" }} - by {{ page.author }}</div>
-            {% endif %}
+                <div></div>
+                <div class="article">
+                  {{ page.content | markdownify }}
+                </div>
 
-      	    {% if page.category == "blog" %}
-      	    <img class="blog-category" src="{{ page.image }}" alt="category" />
-            {% endif %}
+                {% unless page.no_whatsnext %}
+                  {% include whats-next.html %}
+                {% endunless %}
 
-            <div class="article">
-              {{ page.content | markdownify }}
             </div>
-
-			{% if page.comments %}
-			<div id="disqus_thread"></div>
-			<script type="text/javascript">
-			    var disqus_shortname = 'sixsq';
-
-			    /* * * DON'T EDIT BELOW THIS LINE * * */
-			    (function() {
-			        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-			        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-			        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-			    })();
-			</script>
-			<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-			<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>			{% endif %}
-          </div>
-          
         </div>
       </div>
 
