--- a/sixsq.css
+++ b/sixsq.css
@@ -698,7 +698,7 @@ div.bx-viewport {
 /* Nutshell */
 
 .list_nutshell section{
-  height: 50px;
+  margin-bottom: 10px;
 }
 
 
@@ -711,13 +711,13 @@ div.bx-viewport {
   border-radius: 4px;
   list-style: none;
   margin: 15px 0 20px 0;
-  padding: 5px 0px 5px 25px;
+  padding: 5px 0px 10px 25px;
   background-color: #E2E2E2;
 }
 
 .list_usecases div, .list_users div, .list_nutshell div {
   float: left;
-  margin: 0 3% 15px 0;
+  margin: 0 3% 0 0;
   width: 30%;
 }
 
@@ -735,7 +735,7 @@ div.bx-viewport {
 }
 
 .list_usecases section {
-  height: 60px;
+/*  height: 95px; */
 }
 
 /* Users */
