--- a/_includes/top.html
+++ b/_includes/top.html
@@ -8,7 +8,7 @@
       <li id="menu_blog"><a href="/blog/index.html">Blog</a></li>
       <li id="menu_news"><a href="/news/index.html">News</a></li>
       <li id="menu_customers"><a href="/customers/index.html">Customers</a></li>
-<!--      <li><a href="/jobs/index.html">Jobs</a></li> -->
+      <li id="menu_jobs"><a href="/jobs/index.html">Jobs</a></li>
       <li id="menu_about"><a href="/about-us.html">About Us</a></li>
       <li id="menu_contact"><a href="/contact.html">Contact</a></li>
     </ul>
