Correction on customers

--- a/_includes/customers.html
+++ b/_includes/customers.html
@@ -8,7 +8,7 @@
     <img src="/img/content/logo_atos.png" />
     <img src="/img/content/logo_interoute.png" />
     <img src="/img/content/logo_ebu-uer.png" />
-    <img src="/img/content/logo_terma.png" />
+    <img src="/img/content/logo_rhea.png" />
     <img src="/img/content/logo_scisys.png" />
   </div>
   </a>
