Update doctype to html 5. Fix footer for products overview and use case pages

--- a/_layouts/article_slipstream_overview.html
+++ b/_layouts/article_slipstream_overview.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
+<!DOCTYPE html>
 
 <html 
    xmlns="http://www.w3.org/1999/xhtml" 
@@ -46,7 +46,8 @@
 
                     {% include whats-next.html %}
 
-                </div>
+                  </div>
+              </div>
           </div>
       </div>
 
