--- a/_layouts/article_nuvlabox_overview.html
+++ b/_layouts/article_nuvlabox_overview.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
+<!DOCTYPE html>
 
 <html 
    xmlns="http://www.w3.org/1999/xhtml" 
@@ -25,8 +25,7 @@
       </div>
 
       <div id="content">
-        <div class="content_bg">
-
+          <div class="content_bg">
               <div class="main">
                   <nav>
                       <h1 class="list_title">{{ page.title }}</h1>
@@ -45,7 +44,8 @@
 
                     {% include whats-next-and-order.html %}
 
-                </div>
+                  </div>
+              </div>
           </div>
       </div>
 
