--- a/_includes/customers.html
+++ b/_includes/customers.html
@@ -1,15 +1,28 @@
-<div class="customers">
-  <a href="/customers">
-  <h3>Customers</h3>
+<div class="container">
+  <h1>Our customers</h1>
   <p>Our customers are large and small system integrators, high-tech companies, institutions and agencies. We value transparent relationships, built on trust and honesty. This approach is valued by our customers and partners, giving us an edge over competition.</p>
-  <div class="logos">
-    <img src="/img/content/logo_esa.png" />
-    <img src="/img/content/logo_citrix.png" />
-    <img src="/img/content/logo_atos.png" />
-    <img src="/img/content/logo_interoute.png" />
-    <img src="/img/content/logo_ebu-uer.png" />
-    <img src="/img/content/logo_rhea.png" />
-    <img src="/img/content/logo_scisys.png" />
-  </div>
-  </a>
+  <ul id="bxslider" data-call="bxslider" data-options="slideMargin:0, auto:true, autoReload:true" data-breaks="[{screen:0, slides:3, pager:false, controls: false}, {screen:460, slides:5}, {screen: 768, slides:8, pager:false}]">
+
+    <li>
+	    <img src="/img/content/logo_esa.png" />
+    </li>
+    <li>
+      <img src="/img/content/logo_citrix.png" />
+    </li>
+    <li>
+      <img src="/img/content/logo_atos.png" />
+    </li>
+    <li>
+      <img src="/img/content/logo_interoute.png" />
+    </li>
+    <li>
+      <img src="/img/content/logo_ebu-uer.png" />
+    </li>
+    <li>
+      <img src="/img/content/logo_rhea.png" />
+    </li>
+    <li>
+      <img src="/img/content/logo_scisys.png" />
+    </li>
+  </ul>
 </div>
