--- a/_includes/whats-next-and-order.html
+++ b/_includes/whats-next-and-order.html
@@ -1,9 +1,13 @@
-<h1>What's next?</h1>
-<div>
-  <p>
+<div style="background-color: #eee;">
+  <div class="container">
+    <h1>What's next?</h1>
+    <p>
 Interested and want to know more? We'd be pleased to provide you with further information. Get in touch or simply order here.
-  </p>
+    </p>
+    <p><a href="#" class="btn btn-primary btn-lg" role="button">Contact us &raquo;</a></p>
+    <p><a href="#" class="btn btn-primary btn-lg" role="button">Order now &raquo;</a></p>
+<!--          <span class='contact-us-placeholder'></span>
+  <p/>
+  <span class='order-now-placeholder'></span>
+</div> -->
 </div>
-<span class='contact-us-placeholder'></span>
-<p/>
-<span class='order-now-placeholder'></span>
