--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,16 +4,24 @@
 
   <title>SixSq. {{ page.title }}</title>
 
-  <link rel="stylesheet" type="text/css" href="/sixsq.css" media="screen,print" />
-  <link href="/css/jquery-ui.css" rel="stylesheet">
-  <script src="/js/jquery.js" type="text/javascript"></script>
-  <script src="/js/jquery-ui.js" type="text/javascript"></script>
-  <script src="/js/cufon-yui.js" type="text/javascript"></script>
-  <script src="/js/helveticaneue_300-helveticaneue_700.font.js" type="text/javascript"></script>
-  <script src="/js/bebas_400.font.js" type="text/javascript"></script>
-  <script src="/js/jquery.bxSlider.min.js" type="text/javascript"></script>
-  <script src="/js/sixsq.js" type="text/javascript"></script>
-  <script src="/js/siutsur.min.js" type="text/javascript"></script>
+  <!-- Bootstrap core CSS -->
+  <link href="/externals/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="/externals/bxslider/jquery.bxslider.css" rel="stylesheet" />
+
+  <!-- Custom styles for this template -->
+  <link href="/css/jumbotron.css" rel="stylesheet" />
+  <link href="/css/slider.css" rel="stylesheet" />
+  <link href="/css/navbar.css" rel="stylesheet" />
+  <link href="/css/footer.css" rel="stylesheet" />
+  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+  <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
   <script type="text/javascript">
 
