--- a/_layouts/article_nuvlabox_overview.html
+++ b/_layouts/article_nuvlabox_overview.html
@@ -16,44 +16,119 @@
    xmlns:xsd="http://www.w3.org/2001/XMLSchema#">
 
   {% include head.html %}
-  
-  <body class="not_front_page">
-    <div id="wrapper">
+  {% include top.html %}
+  {% include nuvlabox_nav.html %}
+  {% include nuvlabox_intro.html %}
 
-      <div id="header">
-        {% include top.html %}
-      </div>
-
-      <div id="content">
-          <div class="content_bg">
-              <div class="main">
-                  <nav>
-                      <h1 class="list_title">{{ page.title }}</h1>
-                      <ul>
-                          <li id="sub_overview"><a href="/products/nuvlabox.html">Overview</a></li>
-                          <li id="sub_usecases"><a href="/products/nuvlabox-usecases.html">Use Cases</a></li>
-                          <li id="sub_features"><a href="/products/nuvlabox-features.html">Features</a></li>
-                          <li id="sub_techspecs"><a href="/products/nuvlabox-tech.html">Tech Specs</a></li>
-                          <li id="sub_pricing"><a href="/products/nuvlabox-pricing.html">Pricing</a></li>
-                      </ul>
-                  </nav>
-                  <div class="article">
-                    {{ page.content | markdownify }}
-
-                    {% include overview_usecases.html %}
-
-                    {% include whats-next-and-order.html %}
-
-                  </div>
-              </div>
+        <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <h2>Private</h2>
+            <p>
+              A private cloud solution ideal for SME/SMB, NGO and small campuses.
+            </p>
           </div>
+          <div class="col-md-4">
+            <h2>
+                Compact
+            </h2>
+            <p>
+                Replace up to 8 of your servers with an appliance as small as a modem...or 2 Swiss chocolate boxes.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <h2>
+                Simple
+            </h2>
+            <p>
+                Smart factory settings and zero config means it's a child's play to setup and use. 
+            </p>
+          </div>
+          <div class="col-md-4">
+            <h2>
+                Connected
+            </h2>
+            <p>
+                Includes built-in WiFi and dual Ethernet connections. Can also be remote controlled.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <h2>
+                Secure
+            </h2>
+            <p>
+                All communication encrypted and deployments automated for higher security.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <h2>
+                Scalable
+            </h2>
+            <p>
+                Can scale out to remote or public clouds, giving you the simplest ever complete hybrid cloud solution.
+            </p>
+          </div>
+        </div>
       </div>
 
+      <div style="background-color: #eee">
+        <div class="container">
+          <h1 id="who-is-the-nuvlabox-for">Who is the NuvlaBox for?</h1>
+          <div class="row">
+            <div class="col-md-6">
+              <h2>
+                Small and Medium Enterprises
+              </h2>
+              <p>
+                Perfect for SMEs wishing to access a small to medium-sized private cloud. NuvlaBox offers an affordable entry point into private company cloud computing.
+              </p>
+            </div>
+            <div class="col-md-6">
+              <h2>
+                Large Enterprises
+              </h2>
+              <p>
+                Ideal for larger enterprises wishing to federate smaller sites. NuvlaBox can be interconnected to maximise sharing and optimise resource utilisation.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+        <div class="container usecases">
+          <h1>NuvlaBox Use Cases</h1>
+          <div class="row">
+            <div class="col-md-4">
+              <h2>
+                Schools or Federation of Schools
+              </h2>
+              <p>Directors of schools, like most leaders of non-IT organisations, understandably want to focus on their primary mission, which is to educate children. For them, IT...
+              </p>
+              <p><a class="btn btn-default" href="#" role="button">Use case details &raquo;</a></p>
+            </div>
+            <div class="col-md-4">
+              <h2>
+                Putting Intelligence at the Edge of the Network
+              </h2>
+              <p>Network and internet service providers constantly have the issue of better control and handover at the edge of their network. For example, ensuring that the...
+              </p>
+              <p><a class="btn btn-default" href="#" role="button">Use case details &raquo;</a></p>
+            </div>
+            <div class="col-md-4">
+              <h2>
+                Field Operations with Agile Local Infrastructure
+              </h2>
+              <p>Users operating in the field, such as journalists (e.g. sports events, international conferences, emergency coverage) and aid workers (e.g. relief efforts, aid camps) require a...
+              </p>
+              <p><a class="btn btn-default" href="#" role="button">Use case details &raquo;</a></p>
+            </div>
+          </div>
+          <p><a href="/products/nuvlabox-usecases.html" class="btn btn-primary btn-lg" role="button">Read more Use Cases &raquo;</a></p>
+        </div>
+      </div>
+
+      {% include whats-next-and-order.html %}
       {% include footer.html %}
-
-    </div>
-
-    <script type="text/javascript">$("#menu_{{ page.class }} > a, nav li#sub_{{ page.sub }} > a").addClass("current");</script>
 
   </body>
 </html>
