--- a/_layouts/article_nuvlabox_usecases.html
+++ b/_layouts/article_nuvlabox_usecases.html
@@ -17,72 +17,56 @@
 
   {% include head.html %}
   
-  <body class="not_front_page">
-    <div id="wrapper">
+  {% include top.html %}
 
-      <div id="header">
-        {% include top.html %}
-      </div>
+  {% include nuvlabox_nav.html %}
 
-      <div id="content">
-        <div class="content_bg">
-          <div class="main">
-              <nav>
-                  <h1 class="list_title">{{ page.title }}</h1>
-                  <ul>
-                      <li id="sub_overview"><a href="/products/nuvlabox.html">Overview</a></li>
-                      <li id="sub_usecases"><a href="/products/nuvlabox-usecases.html">Use Cases</a></li>
-                      <li id="sub_features"><a href="/products/nuvlabox-features.html">Features</a></li>
-                      <li id="sub_techspecs"><a href="/products/nuvlabox-tech.html">Tech Specs</a></li>
-                      <li id="sub_pricing"><a href="/products/nuvlabox-pricing.html">Pricing</a></li>
-                  </ul>
-              </nav>
-              <div class="article">
-                <h1>Use Cases</h1>
-
-                <div class="list_usecases clearfix">                
-                    {% for post in site.posts %}
-                    {% if post.category == page.category and post.class == page.class and post.layout == 'article' %}
-                    <div>
-                        <a href="#{{ post.title | replace:' ','-' }}">
-                            <h3>
-                                {{ post.title }}
-                            </h3>
-                            <section>
-                                {{ post.content | markdownify | truncatewords: 16 }}
-                            </section>
-                        </a>
-                    </div>
-                    {% endif %}
-                    {% endfor %}
-                </div>
-            
-            {% for post in site.posts %}
-            {% if post.category == page.category and post.class == page.class and post.layout == 'article' %}
-                <h1 id="{{ post.title | replace:' ','-' }}">
-                  {{ post.title }}
-                </h1>
-                <h2>User profile</h2>
-                <div>
-                  {{ post.user_profile }}
-                </div>
-                <h2>Overview</h2>
-                <div>
-                  {{ post.content }}
-                </div>
-            {% endif %}
-            {% endfor %}
-              </div>
-
-        {% include whats-next-and-order.html %}
-
-              </div>
-          </div>
-      </div>
-
-      {% include footer.html %}
-
+  <div class="jumbotron" id="nuvlabox-main-story">
+    <div class="container">
+      <h1>NuvlaBox</h1>
+      <p>Pre-installed and ready to go in minutes, a fanless PC, powered by 1-click application deployment App Store. Having your own cloud has never been this affordable, secure and easy.</p>
     </div>
+  </div>
+
+  <div class="container">
+    <h1>Use Cases</h1>
+
+    <div class="row">
+    {% for post in site.posts %}
+      {% if post.category == page.category and post.class == page.class and post.layout == 'article' %}
+      <div class="col-md-4">
+        <h2>{{ post.title }}</h2>
+        <p>
+          {{ post.content | markdownify | truncatewords: 16 }}
+        </p>
+        <a class="btn btn-default" href="#{{ post.title | replace:' ','-' }}" role="button">Use case details &raquo;</a>
+      </div>
+      {% endif %}
+    {% endfor %}
+    </div>
+  </div>
+
+  {% for post in site.posts %}
+    {% if post.category == page.category and post.class == page.class and post.layout == 'article' %}
+    <div class="container">
+      <h1 id="{{ post.title | replace:' ','-' }}">
+        {{ post.title }}
+      </h1>
+      <h2>User profile</h2>
+      <div>
+        {{ post.user_profile }}
+      </div>
+      <h2>Overview</h2>
+      <div>
+        {{ post.content }}
+      </div>
+    </div>
+    {% endif %}
+  {% endfor %}
+
+  {% include whats-next-and-order.html %}
+
+  {% include footer.html %}
 
     <script type="text/javascript">$("#menu_{{ page.class }} > a, nav li#sub_{{ page.sub }} > a").addClass("current");</script>
 
