--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -17,30 +17,123 @@
 
   {% include head.html %}
 
-  <body class="front_page">
+  <body>
 
-    <div id="wrapper">
-
-      <div id="header">
-        
         {% include top.html %}
         
-        {% include banner.html %}
+        <!--
+            <div class="container">
+              <ul id="bxslider" data-call="bxslider" data-options="slideMargin:5, auto:true, autoReload:true" data-breaks="[{screen:0, slides:1, pager:false, controls: false}, {screen:460, slides:1}, {screen: 768, slides:1}]">
 
-      </div>
+                <li>
+            	  <a href="/jobs/2014/05/09/job-gaia-2014.html">
 
-      <div id="content">
-        
-        <!--{% include front-personae.html %}-->
+                    <h1>SixSq is Recruiting!</h1>
+                    <h3>We are looking for a software engineer for the Gaia mission</h3>
+                  </a>
+                </li>
 
-        {% include front-products.html %}
+                <li>
+            	  <a href="/news/2014/05/07/news-hn-marketplace-launch.html">
+
+            	    <img style="float: right;" width="250" src="/img/content/helix-nebula.jpg" alt="image" />
+
+                    <h1>The Science Cloud</h1>
+                    <h3>Helix Nebula - From cloud ACTIVE to cloud PRODUCTIVE with SlipStream</h3>
+                  </a>
+                </li>
+
+                <li>
+            	  <a href="/products/slipstream.html">
+
+                    <h1>Application Deployment Automation</h1>
+                    <h3>Change your business with one-click application deployment</h3>
+                  </a>
+                </li>
+
+                <li>
+            	  <a href="/products/slipstream.html">
+
+                    <h1>SlipStream Hosted Service (SaaS)</h1>
+                    <h3>Using the cloud has never been this easy! Single click your way to application deployment automation</h3>
+                  </a>
+                </li>
+
+                <li>
+            	  <a href="/products/slipstream.html">
+
+                    <h1>Helix Nebula Chooses SlipStream</h1>
+                    <h3>The Science Cloud uses SlipStream to provision complex applications on multi-clouds</h3>
+                  </a>
+                </li>
+
+              </ul>
+
+            </div>
+        -->
+
+            <!-- Main jumbotron for a primary marketing message or call to action -->
+            <div id="main-story" class="jumbotron">
+              <div class="container">
+                <h1>Bridging the digital divid</h1>
+                <p>A cloud appliance designed for SMEs, SMBs, NGOs and the emerging world.</p>
+                <h2>Partners wanted!!</h2>
+                <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+              </div>
+
+            <div class="container">
+              <div class="row">
+                <div class="col-md-4">
+                  <h2>Schools or Federation of Schools</h2>
+                  <p>Directors of schools, like most leaders of non-IT organisations, understandably want to focus on their primary mission, which is to educate children. For them, IT is generally seen as a necessary evil and too often a distraction.</p>
+                  <p><a class="btn btn-default" href="#" role="button">Use case details &raquo;</a></p>
+                </div>
+                <div class="col-md-4">
+                  <h2>Putting Intelligence at the Edge of the Network</h2>
+                  <p>Network and internet service providers constantly have the issue of better control and handover at the edge of their network. </p>
+                  <p><a class="btn btn-default" href="#" role="button">Use case details &raquo;</a></p>
+               </div>
+                <div class="col-md-4">
+                  <h2>Field Operations with Agile Local Infrastructure</h2>
+                  <p>Users operating in the field, such as journalists (e.g. sports events, international conferences, emergency coverage) and aid workers (e.g. relief efforts, aid camps) require a local IT infrastructure.</p>
+                  <p><a class="btn btn-default" href="#" role="button">Use case details &raquo;</a></p>
+                </div>
+              </div>
+            </div> <!-- /container -->
+          </div> <!-- /container -->
+
+          <div class="container">
+            <h1>Application deployment for hybrid cloud</h1>
+            <h4>1-click multi-cloud application deployment platform. Real multi-cloud software solution built on open source software.</h4>
+            <h2>Partners wanted!!</h2>
+            <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+          </div>
+
+            <div class="container">
+              <div class="row">
+                <div class="col-md-4">
+                  <h2>Enterprise App Store / Self-Service IT</h2>
+                  <p>Provisioning applications inside an organisation should be as simple as installing an app on a mobile device. Too often, the enterprise process for deploying an...</p>
+                  <p><a class="btn btn-default" href="#" role="button">Use case details &raquo;</a></p>
+                </div>
+                <div class="col-md-4">
+                  <h2>Hybrid Cloud Provisioning</h2>
+                  <p>Many companies see the need to maintain at least part of their cloud infrastructure at home. Meanwhile, the ability to burst or scale-out to public...</p>
+                  <p><a class="btn btn-default" href="#" role="button">Use case details &raquo;</a></p>
+               </div>
+                <div class="col-md-4">
+                  <h2>LAMP and complex application provisioning</h2>
+                  <p>The current cloud landscape is busy with solutions that allow users to manage virtual machine life cycles. While this is an important building block, it...</p>
+                  <p><a class="btn btn-default" href="#" role="button">Use case details &raquo;</a></p>
+                </div>
+              </div>
+            </div> <!-- /container -->
+          </div> <!-- /container -->
+        </div> <!-- /container -->
 
         {% include customers.html %}
         
         {% include footer.html %}
 
-      </div>
-      
-    </div>
   </body>
 </html>
